erDiagram
    Companies ||--o{ Users : has
    Companies ||--o{ Trucks : owns
    Companies ||--o{ Shipments : manages
    Companies ||--o{ ShipmentStatuses : defines
    Companies ||--o{ ShipmentActionPreferences : configures
    Companies ||--o{ Forms : owns
    Companies ||--o{ Offers : issues
    Companies ||--o{ Ratings : has
    
    Users ||--o{ Deliveries : performs
    Users ||--o{ Shipments : handles
    Users ||--o{ Forms : submits
    Users ||--o{ Ratings : submits

    Shipments ||--o{ Offers : receives
    
    Trucks ||--o{ Deliveries : assigned_to
    Trucks ||--o{ Shipments : carries
    Trucks ||--o{ Forms : relates_to
    
    Shipments }o--|| ShipmentStatuses : has_status
    
    ShipmentStatuses ||--o{ ShipmentActionPreferences : used_in
    
    Deliveries |o--o{ DeliveryShipments : has
    Deliveries ||--o{ Forms : has
    
    Shipments |o--o{ DeliveryShipments : included_in

    Ratings ||--|| DeliveryShipments : belong_to
    
    Companies {
        bigint id PK
        string name
        string address
        string phone_number
        datetime created_at
        datetime updated_at
        float average_rating
        integer ratings_count
    }

    Ratings {
        bigint id PK
        bigint company_id FK
        bigint user_id FK
        bigint delivery_shipment_id FK
        integer stars 
        string comment 
        datetime created_at
        datetime updated_at
    }
    
    Users {
        bigint id PK
        string email
        string encrypted_password
        string reset_password_token
        datetime reset_password_sent_at
        datetime remember_created_at
        integer role
        string first_name
        string last_name
        string drivers_license
        bigint company_id FK
        string home_address
        datetime created_at
        datetime updated_at
    }
    
    Trucks {
        bigint id PK
        string make
        string model
        integer year
        integer mileage
        bigint company_id FK
        decimal length
        decimal width
        decimal height
        decimal weight
        string vin
        string license_plate
        boolean active
        datetime created_at
        datetime updated_at
    }
    
    Deliveries {
        bigint id PK
        bigint user_id FK
        bigint truck_id FK
        integer status
        datetime created_at
        datetime updated_at
    }
    
    Shipments {
        bigint id PK
        string name
        string sender_name
        text sender_address
        string receiver_name
        text receiver_address
        decimal weight
        bigint truck_id FK
        bigint shipment_status_id FK
        bigint user_id FK
        bigint company_id FK
        decimal length
        decimal width
        decimal height
        date deliver_by
        float sender_latitude
        float sender_longitude
        float receiver_latitude
        float receiver_longitude
        datetime created_at
        datetime updated_at
    }

    DeliveryShipments {
        bigint id PK
        bigint delivery_id FK
        bigint shipment_id FK
        text sender_address
        text receiver_address
        float sender_latitude
        float sender_longitude
        float receiver_latitude
        float receiver_longitude
        datetime loaded_date
        datetime delivered_date
        datetime created_at
        datetime updated_at
    }
    
    ShipmentStatuses {
        bigint id PK
        string name
        bigint company_id FK
        boolean locked_for_customers
        boolean closed
        datetime created_at
        datetime updated_at
    }
    
    ShipmentActionPreferences {
        bigint id PK
        string action
        bigint company_id FK
        bigint shipment_status_id FK
        datetime created_at
        datetime updated_at
    }
    
    Forms {
        bigint id PK
        bigint user_id FK
        bigint company_id FK
        string formable_type
        bigint formable_id
        string title
        string form_type
        jsonb content
        datetime submitted_at
        datetime created_at
        datetime updated_at
    }
    
    Offers {
        bigint id PK
        bigint shipment_id FK
        bigint company_id FK
        integer status
        text reception_address
        boolean pickup_from_sender
        boolean deliver_to_door
        text dropoff_location
        boolean pickup_at_dropoff
        float price
        text notes
        datetime created_at
        datetime updated_at
    }